--- a/indext.html
+++ b/indext.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favour's portfolio</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Favour's portfolio website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div id="header">
+<div class="container">
+    <nav>
+         <img src="images/exo-logo.jpg" alt="logo" class="logo"> 
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">services</a></li>
+            <li><a href="">portfolio</a></li>
+            <li><a href="">contact</a></li>
+        </ul>
+    </nav>
+    <div class="header-text">
+        <p>WRITER</p>
+        <h1>Hi, i'm <span>Favour</span> <br> John From Nigeria</h1>
+    </div>
+</div>
+  </div>
+<!-- About -->
+  <div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="images/6.jpg" alt="">
+            </div>
+            <div class="about-col-2">
+                <h2>About Me</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ut repellat pariatur quam maxime nihil numquam blanditiis exercitationem. Ipsum dicta, eaque modi fuga doloremque impedit quas incidunt itaque. Consequuntur, voluptatem.</p>
+          <div class="about-titles">
+            <p class="about-links active-link">Skills</p>
+            <p class="about-links">Experience</p>
+            <p class="about-links">Education</p>
+          </div>
+          
+            </div>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
