--- a/indext.html
+++ b/indext.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favour's portfolio website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/2f8bf793cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="header">
@@ -66,6 +67,68 @@
         </div>
     </div>
   </div>
+  <!-- services -->
+  <div id="services">
+    <div class="container">
+      <h2 class="sub-title">My services</h2>
+      <div class="services-list">
+<div>
+  <i class="fa-solid fa-code"></i>
+  <h3>Web Design</h3>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla mollitia dicta cum odit rerum, id voluptas ipsum architecto accusamus dolore aut inventore asperiores placeat dolores, culpa ab perferendis maiores? Dolore.</p>
+  <a href="">Learn more</a>
+  </div>
+  <div>
+    <i class="fa-solid fa-crop-simple"></i>
+    <h3>Web Dev</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla mollitia dicta cum odit rerum, id voluptas ipsum architecto accusamus dolore aut inventore asperiores placeat dolores, culpa ab perferendis maiores? Dolore.</p>
+    <a href="">Learn more</a>
+    </div>
+    <div>
+      <i class="fa-brands fa-app-store-ios" ></i>
+      <h3>App Design</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla mollitia dicta cum odit rerum, id voluptas ipsum architecto accusamus dolore aut inventore asperiores placeat dolores, culpa ab perferendis maiores? Dolore.</p>
+      <a href="">Learn more</a>
+      </div>
+      </div>
+    </div>
+  </div>
+<!-- portfolio -->
+<div id="portfolio">
+<div class="container">
+  <h2 class="subtitle">My work</h2>
+  <div class="work-list">
+    <div class="work">
+      <img src="images/web-dev.jpg" alt="">
+      <div class="layer">
+        <h3>Web development</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, sint rem, earum odio ex voluptatem temporibus</p>
+        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+      </div>
+    </div>
+    <div class="work">
+      <img src="images/social-app.jpg" alt="">
+      <div class="layer">
+        <h3>social Media App</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, sint rem, earum odio ex voluptatem temporibus</p>
+        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+      </div>
+    </div>
+    <div class="work">
+      <img src="images/music-app.jpg" alt="">
+      <div class="layer">
+        <h3>Music App</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, sint rem, earum odio ex voluptatem temporibus</p>
+        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+<a href="#" class="SM">See more</a>
+</div>
+<!-- contact -->
+
+
 
 <script src="script.js"></script>
 
