--- a/indext.html
+++ b/indext.html
@@ -14,14 +14,14 @@
     <nav>
          <img src="images/logo.jpg" alt="logo" class="logo"> 
         <ul id="sidemenu" >
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">services</a></li>
-            <li><a href="">portfolio</a></li>
-            <li><a href="">contact</a></li>
-            <i class="fas fa-times" onclick="closemenu()"></i>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#contact">contact</a></li>
+            <i class="fa-solid fa-square-xmark" onclick="closemenu()"></i>
         </ul>
-        <i class="fas fa-bars" onclick="openmenu()"></i>
+        <i class="fa-solid fa-bars" onclick="openmenu()"></i>
     </nav>
     <div class="header-text">
         <p class="work">WEB/APP DEVELOPER</p>
