--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/6.jpg" alt="">
+                <img src="images/self-1.jpg" alt="">
             </div>
             <div class="about-col-2">
                 <h2>About Me</h2>
@@ -140,7 +140,7 @@
   <a href=""><i class="fa-brands fa-facebook"></i></a>
   <a href=""><i class="fa-brands fa-twitter"></i></a>
   <a href=""><i class="fa-brands fa-instagram"></i></a>
-  <a href=""><i class="fa-brands fa-linkedin"></i></a>
+  <a href=""><i class="fa-brands fa-whatsapp"></i></a>
 </div>
 </div>
 <div class="contact-right">
