--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <div class="header-text">
         <p class="work">WEB/APP DEVELOPER</p>
-        <h1>Hi, i'm <span>Favour</span> <br> John From Nigeria</h1>
+        <h1>Hi, i'm <span>Favour</span> John <br> From Nigeria</h1>
     </div>
 </div>
   </div>
